@@ -1,3 +1,7 @@
+2015-06-18 Giuseppe Salamanna <salaman AT cern.ch>
+	* ttHMultileptonLooseEventSaver.cxx: some fixes for things that weren't called as in Run 1 ntuple and some duplicate trigger items; 
+	jet_truth_label now works: it has been switched on
+	
 2015-06-17 Giuseppe Salamanna <salaman AT cern.ch>
 	* ttHMultileptonLooseEventSaver.cxx: d0 not corrected for PV, as per ID Tracking recommendations; 
 	z0 corrected for PV, now accessed by checking xAOD::VxType. Added var for N(PU vertices)
